--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Volume Gambling (Haram) — Terburuk Button</title>
+  <title>Volume Gambling (Haram)</title>
   <style>
     :root{--bg:#0b1020;--card:#0f1724;--accent:#7c3aed;--muted:#98a0b3}
     *{box-sizing:border-box;font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,'Helvetica Neue',Arial}
